# jsonic

./: Cargo.toml  readme.md
benches/: json-rust.rs  jsonic.rs  serde_json.rs  simd-json.rs  sonic-rs.rs
src/: bit_twiddling.rs  elements.rs  generics.rs  json_element.rs  json_elements.rs  json_error.rs  json_item.rs  json_parser.rs  json_type.rs  json_types.rs  key.rs  lib.rs  main.rs  parser.rs  slice.rs  utils.rs
src/json_elements/: json_array.rs  json_number.rs  json_object.rs
