[package]
name = "jsonic"
version = "0.2.11"
edition = "2021"
description = "Fast, small JSON parsing library for rust with no dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/g1mv/jsonic"
authors = ["Guillaume Voirin"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false

[dev-dependencies]
divan = "0.1.14"
json = "0.12.4"
serde_json = "1.0.114"
sonic-rs = "0.3"
simd-json = "0.13.8"

[[bench]]
name = "jsonic"
harness = false

[[bench]]
name = "json-rust"
harness = false

[[bench]]
name = "serde_json"
harness = false

[[bench]]
name = "sonic-rs"
harness = false

[[bench]]
name = "simd-json"
harness = false
